# ObraGest

./: .gitignore  Makefile  README.md  build.bat  docker-compose.yml
.github/workflows/: build-windows.yml
backend/: .dockerignore  Dockerfile  db.sqlite3  docker-entrypoint.sh  google_client_secret.json.example  launcher.py  launcher.spec  manage.py  pyproject.toml
backend/construction/: admin.py  apps.py  constants.py  models.py  serializers.py  tests.py  urls.py  views.py
backend/construction/management/commands/: seed.py  seed_categories.py
backend/construction/migrations/: 0001_initial.py  0002_categoria_unique_nome_tipo.py  0003_field_max_lengths.py  0004_categoria_subcategoria_investimento.py  0005_fornecedor_quantidade_operacao.py  0006_obra_arquivada.py
backend/construction/services/: backup.py  google_drive.py
backend/obragest/: asgi.py  pagination.py  settings.py  spa.py  urls.py  wsgi.py
frontend/: Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  index.css  vite-env.d.ts
frontend/src/api/: client.ts
frontend/src/components/: CategoriaSelect.tsx  CityInput.tsx  CurrencyField.tsx  DateField.tsx  FieldLabel.tsx  FornecedorSelect.tsx  Layout.tsx  ObraForm.tsx  OperacaoForm.tsx
frontend/src/constants/: limits.ts  theme.ts
frontend/src/pages/: CategoriasPage.tsx  DashboardPage.tsx  FornecedoresPage.tsx  ObraDetailPage.tsx  ObrasPage.tsx  SettingsPage.tsx
frontend/src/types/: index.ts
frontend/src/utils/: currency.ts  dateField.ts  dates.ts  export.ts  (+1 more)
