[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "django>=6.0.6",
    "django-cors-headers>=4.9.0",
    "psycopg[binary]>=3.3.4",
    "python-dotenv>=1.2.2",
]

[dependency-groups]
dev = [
    "django-stubs>=6.0.6",
    "mypy>=2.1.0",
    "ruff>=0.15.20",
]
