[project]
name = "backend"
version = "0.1.0"
description = "ObraGest - gestão de custos de obras"
requires-python = ">=3.13"
dependencies = [
    "django>=6.0.6",
    "django-cors-headers>=4.9.0",
    "djangorestframework>=3.16.0",
    "python-dotenv>=1.2.2",
    "whitenoise>=6.9.0",
    "watchfiles>=1.0.0",
]

[dependency-groups]
dev = [
    "django-stubs>=6.0.6",
    "mypy>=2.1.0",
    "ruff>=0.15.20",
]
